Revert "Feature cluster api and functions"
This reverts commit 9f73c0564e77c66d83823d1ccb3e798232abb214
